--- a/config.toml
+++ b/config.toml
@@ -35,3 +35,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     name = "About"
     url = "/about/"
     weight = 2
+[[menu.primary]]
+    name = "Sehr geheim"
+    url = "/sehr-geheim/"
+    weight = 3
